python bindings cmake: look for boost numpy3

--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -22,31 +22,45 @@ target_link_libraries(cloudphxx ${PYTHON_LIBRARIES})
 #  find_package(Boost COMPONENTS python27)
 #endif()
 
-find_package(Boost COMPONENTS python3)
-if (NOT Boost_FOUND)
-  message(FATAL_ERROR "
-    Boost.Python not found. 
-    Please install it (e.g. sudo apt-get install libboost-python-dev).
-  ")
-endif()
-target_link_libraries(cloudphxx ${Boost_LIBRARIES})
+#find_package(Boost COMPONENTS python3)
+#if (NOT Boost_FOUND)
+#  message(FATAL_ERROR "
+#    Boost.Python3 not found. 
+#    Please install it (e.g. sudo apt-get install libboost-python-dev).
+#  ")
+#endif()
+#target_link_libraries(cloudphxx ${Boost_LIBRARIES})
+
+#find_package(Boost COMPONENTS numpy3)
+#if (NOT Boost_FOUND)
+#  message(FATAL_ERROR "
+#    Boost.Numpy3 not found. 
+#    Please install it (e.g. sudo apt-get install libboost-python-dev).
+#  ")
+#endif()
+#target_link_libraries(cloudphxx ${Boost_LIBRARIES})
+#target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 
 # boost python 1.65.0 replaced the booost::python::numeric API with boost::python::numpy
 if(${Boost_MINOR_VERSION} LESS 65)
   message(STATUS "boost numpy as DBPNUMERIC")
   target_compile_options(cloudphxx PRIVATE -DBPNUMERIC)
 else()
-  if(${Boost_MINOR_VERSION} LESS 67)
-    message(STATUS "boost numpy as numpy")
-    find_package(Boost COMPONENTS numpy REQUIRED)
-  else()
-    #message(STATUS "boost numpy as numpy27")
-    #find_package(Boost COMPONENTS numpy27 REQUIRED)
-    message(STATUS "boost numpy as numpy")
-    find_package(Boost COMPONENTS numpy REQUIRED)
-  endif()
+  message(STATUS "boost numpy as numpy3")
+  find_package(Boost COMPONENTS numpy3)
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
+#  if(${Boost_MINOR_VERSION} LESS 67)
+#    message(STATUS "boost numpy as numpy")
+#    find_package(Boost COMPONENTS numpy REQUIRED)
+#  else()
+#    #message(STATUS "boost numpy as numpy27")
+#    #find_package(Boost COMPONENTS numpy27 REQUIRED)
+#    message(STATUS "boost numpy as numpy")
+#    find_package(Boost COMPONENTS numpy REQUIRED)
+#  endif()
+#  target_link_libraries(cloudphxx ${Boost_LIBRARIES})
+#  target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 endif()
 
 # requireing Blitz++
