--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -45,9 +45,11 @@ target_link_libraries(cloudphxx ${PYTHON_LIBRARIES})
 if(${Boost_MINOR_VERSION} LESS 65)
   message(STATUS "boost numpy as DBPNUMERIC")
   target_compile_options(cloudphxx PRIVATE -DBPNUMERIC)
+  find_package(Boost COMPONENTS python3)
+  target_link_libraries(cloudphxx ${Boost_LIBRARIES})
 else()
   message(STATUS "boost numpy as numpy3")
-  find_package(Boost COMPONENTS numpy3)
+  find_package(Boost COMPONENTS numpy3) # also finds python3
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 #  if(${Boost_MINOR_VERSION} LESS 67)
