travis: precache tests fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
     - TEST_SUITE=UWLCM_MT
     - TEST_SUITE=UWLCM_unit_iles
     - TEST_SUITE=UWLCM_unit_smg
-    - TEST_SUITE=MPI_tests
+    - TEST_SUITE=MPI_tests # run tests suite, but with libcloudph++ compiled using mvapich2.
     - TEST_SUITE=MPI_UWLCM_MT MPI=mvapich2
 #TODO: MPI icicle test once libmpdata++ has mpi
 #TODO: MPI UWLCM test once libmpdata++ and UWLCM have mpi
