--- a/bindings/python/CMakeLists.txt
+++ b/bindings/python/CMakeLists.txt
@@ -48,21 +48,15 @@ if(${Boost_MINOR_VERSION} LESS 65)
   find_package(Boost COMPONENTS python3 REQUIRED)
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
 else()
-  message(STATUS "boost numpy as numpy3")
-  find_package(Boost COMPONENTS numpy3 REQUIRED) # also finds python3
+  if(${Boost_MINOR_VERSION} LESS 67)
+    message(STATUS "boost numpy as numpy3")
+    find_package(Boost COMPONENTS numpy3 REQUIRED) # also finds boost python
+  else()
+    message(STATUS "boost numpy as numpy38")
+    find_package(Boost COMPONENTS numpy38 REQUIRED)
+  endif()
   target_link_libraries(cloudphxx ${Boost_LIBRARIES})
   target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
-#  if(${Boost_MINOR_VERSION} LESS 67)
-#    message(STATUS "boost numpy as numpy")
-#    find_package(Boost COMPONENTS numpy REQUIRED)
-#  else()
-#    #message(STATUS "boost numpy as numpy27")
-#    #find_package(Boost COMPONENTS numpy27 REQUIRED)
-#    message(STATUS "boost numpy as numpy")
-#    find_package(Boost COMPONENTS numpy REQUIRED)
-#  endif()
-#  target_link_libraries(cloudphxx ${Boost_LIBRARIES})
-#  target_compile_options(cloudphxx PRIVATE  -DBPNUMPY)
 endif()
 
 # requireing Blitz++
