--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - uses: actions/cuda-toolkit
+    - name: cuda-toolkit
+      uses: Jimver/cuda-toolkit@v0.2.4
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
