--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,11 +21,21 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: cuda-toolkit
+    - name: Install cuda-toolkit
       uses: Jimver/cuda-toolkit@v0.2.4
 
-    - name: Download and install Boost
+    - name: Install boost
       uses: MarkusJx/install-boost@v2.0.0
+      id: install-boost
+      with:
+      # REQUIRED: Specify the required boost version
+      # A list of supported versions can be found here: 
+      # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+      boost_version: 1.73.0
+      # OPTIONAL: Specify a platform version
+      #platform_version: 18.04
+      # OPTIONAL: Specify a custom install location
+      #boost_install_dir: /home/runner/some_directory
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
