--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -36,6 +36,10 @@ jobs:
       #platform_version: 18.04
       # OPTIONAL: Specify a custom install location
       #boost_install_dir: /home/runner/some_directory
+      
+    - name: Install hdf5 (Linux)
+      run: sudo apt-get install libhdf5-dev
+      #if: matrix.os == 'ubuntu-latest'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
