--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -24,22 +24,34 @@ jobs:
     - name: Install cuda-toolkit
       uses: Jimver/cuda-toolkit@v0.2.4
 
-    - name: Install boost
-      uses: MarkusJx/install-boost@v2.0.0
-      id: install-boost
+  #  - name: Install boost
+  #    uses: MarkusJx/install-boost@v2.0.0
+  #    id: install-boost
+  #    with:
+  #      # REQUIRED: Specify the required boost version
+  #      # A list of supported versions can be found here: 
+  #      # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+  #      boost_version: 1.73.0
+  #      # OPTIONAL: Specify a platform version
+  #      #platform_version: 18.04
+  #      # OPTIONAL: Specify a custom install location
+  #      #boost_install_dir: /home/runner/some_directory
+        
+    - name: Cache Boost
+      uses: actions/cache@v2
       with:
-        # REQUIRED: Specify the required boost version
-        # A list of supported versions can be found here: 
-        # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
-        boost_version: 1.73.0
-        # OPTIONAL: Specify a platform version
-        #platform_version: 18.04
-        # OPTIONAL: Specify a custom install location
-        #boost_install_dir: /home/runner/some_directory
+        path: '${{ runner.workspace }}/boost_*.tar.gz'
+        key: 'boost-1.72.0'
+
+    - name: Build Boost
+      # This won't re-download the archive unnecessarily:
+      uses: egor-tensin/build-boost@v1
+      with:
+        version: 1.72.0
       
-    - name: Install hdf5 (Linux)
-      run: sudo apt-get install libhdf5-dev
-      #if: matrix.os == 'ubuntu-latest'
+    #- name: Install hdf5 (Linux)
+    #  run: sudo apt-get install libhdf5-dev
+    #  #if: matrix.os == 'ubuntu-latest'
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
