--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,6 +44,7 @@ jobs:
         key: 'boost-1.72.0'
 
     - name: Build Boost
+      id: boost
       # This won't re-download the archive unnecessarily:
       uses: egor-tensin/build-boost@v1
       with:
@@ -59,7 +60,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBoost_INCLUDE_DIR=${{ steps.boost.outputs.includedir }}
 
     - name: Build
       # Build your program with the given configuration
