--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -43,7 +43,10 @@ jobs:
   #      #boost_install_dir: /home/runner/some_directory
   
     - name: Install Thrust
-      run: sudo apt-get install libthrust-dev
+      #run: sudo apt-get install libthrust-dev
+      run: |
+        git clone --depth=1 git://github.com/thrust/thrust.git --branch 1.9.10-1
+        ln -s `pwd`/thrust/thrust /usr/local/include/thrust
         
     - name: Cache Boost
       uses: actions/cache@v2
