--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,6 +21,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
+    - name: Install Singularity
+      uses: eWaterCycle/setup-singularity@v6
+      with:
+        singularity-version: 3.6.4
+        
+    - name: Download UWLCM Singularity container
+      run: wget https://github.com/igfuw/UWLCM/blob/0fc77ec68053936e36eea4b49f11b3dd2cb1a827/singularity/sng_ubuntu_20_04_cuda_11_1
+        
+    - name: Build UWLCM Singularity container
+      run: singularity build --remote sng_ubuntu_20_04_cuda_11_1.sif sng_ubuntu_20_04_cuda_11_1
+    
     # TODO: cache cuda-toolki
     
     #- name: Install cuda-toolkit
